Add Button block.

--- a/deploy/var/drupal-config/sync/field.field.node.page.field_blocks.yml
+++ b/deploy/var/drupal-config/sync/field.field.node.page.field_blocks.yml
@@ -8,6 +8,7 @@ dependencies:
     - paragraphs.paragraphs_type.blockarticleteaser
     - paragraphs.paragraphs_type.blockaudiofragment
     - paragraphs.paragraphs_type.blockblogpost
+    - paragraphs.paragraphs_type.blockbutton
     - paragraphs.paragraphs_type.blockhowtoadvertise
     - paragraphs.paragraphs_type.blockimagecalltoactions
     - paragraphs.paragraphs_type.blockimagecarousel
@@ -37,6 +38,7 @@ settings:
       blockimagecarousel: blockimagecarousel
       blockarticleteaser: blockarticleteaser
       blockaudiofragment: blockaudiofragment
+      blockbutton: blockbutton
       blockblogpost: blockblogpost
       blockmore: blockmore
     target_bundles_drag_drop:
@@ -70,18 +72,21 @@ settings:
       blockimagecarousel:
         enabled: true
         weight: 13
-      blockarticleteaser:
-        enabled: true
-        weight: 15
       step:
         weight: 15
         enabled: false
+      blockarticleteaser:
+        enabled: true
+        weight: 15
       blockaudiofragment:
         enabled: true
         weight: 16
       slide:
         weight: 18
         enabled: false
+      blockbutton:
+        enabled: true
+        weight: 18
       blockblogpost:
         enabled: true
         weight: 19
