--- a/deploy/htdocs/api/mock/knowledge-center.json
+++ b/deploy/htdocs/api/mock/knowledge-center.json
@@ -29,6 +29,7 @@
 				"data": {
 					"endpoint": "filter-content/knowledge-center.json",
 					"filterLabel": "Filters",
+					"loadMoreLabel": "load more",
 					"filters": [
 						{
 							"type": 0,
