Add Apply Button in filterMenu.

--- a/deploy/htdocs/api/mock/knowledge-center.json
+++ b/deploy/htdocs/api/mock/knowledge-center.json
@@ -30,6 +30,7 @@
 					"endpoint": "filter-content/knowledge-center.json",
 					"filterLabel": "Filters",
 					"loadMoreLabel": "load more",
+					"applyLabel": "Apply",
 					"filters": [
 						{
 							"type": 0,
