--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,8 @@
         "drupal/facets": "1.0-alpha7",
         "drupal/admin_toolbar": "^1.18",
         "drupal/video_embed_field": "1.3",
-        "drupal/field_group": "1.0-rc6"
+        "drupal/field_group": "1.0-rc6",
+        "drupal/jquery_colorpicker": "1.0-rc2"
     },
     "repositories": {
         "mediamonks-drupal-decoupled": {
