--- a/deploy/var/drupal-config/sync/field.field.node.page.field_blocks.yml
+++ b/deploy/var/drupal-config/sync/field.field.node.page.field_blocks.yml
@@ -10,6 +10,7 @@ dependencies:
     - paragraphs.paragraphs_type.blockblogpost
     - paragraphs.paragraphs_type.blockbutton
     - paragraphs.paragraphs_type.blockheromain
+    - paragraphs.paragraphs_type.blockherosecondary
     - paragraphs.paragraphs_type.blockhowtoadvertise
     - paragraphs.paragraphs_type.blockimagecalltoactions
     - paragraphs.paragraphs_type.blockimagecarousel
@@ -42,6 +43,7 @@ settings:
       blockbutton: blockbutton
       blockmore: blockmore
       blockblogpost: blockblogpost
+      blockherosecondary: blockherosecondary
       blockheromain: blockheromain
     target_bundles_drag_drop:
       blockhowtoadvertise:
@@ -74,12 +76,12 @@ settings:
       blockimagecarousel:
         enabled: true
         weight: 13
-      blockarticleteaser:
-        enabled: true
-        weight: 15
       step:
         weight: 15
         enabled: false
+      blockarticleteaser:
+        enabled: true
+        weight: 15
       blockaudiofragment:
         enabled: true
         weight: 16
@@ -95,6 +97,9 @@ settings:
       blockblogpost:
         enabled: true
         weight: 19
+      blockherosecondary:
+        enabled: true
+        weight: 23
       blockheromain:
         enabled: true
         weight: 26
