Fix required fields in block Image with content.

--- a/deploy/var/drupal-config/sync/field.field.paragraph.blockimagewithcontent.field_cropped_image.yml
+++ b/deploy/var/drupal-config/sync/field.field.paragraph.blockimagewithcontent.field_cropped_image.yml
@@ -11,7 +11,7 @@ entity_type: paragraph
 bundle: blockimagewithcontent
 label: 'Cropped image'
 description: ''
-required: false
+required: true
 translatable: false
 default_value:
   -
