--- a/deploy/var/drupal-config/sync/field.field.paragraph.blockimagewithcontent.field_link.yml
+++ b/deploy/var/drupal-config/sync/field.field.paragraph.blockimagewithcontent.field_link.yml
@@ -14,7 +14,7 @@ entity_type: paragraph
 bundle: blockimagewithcontent
 label: Link
 description: ''
-required: true
+required: false
 translatable: true
 default_value: {  }
 default_value_callback: ''
@@ -56,5 +56,41 @@ settings:
         enabled: false
       styles:
         weight: 22
+        enabled: false
+      blockarticleteaser:
+        weight: 24
+        enabled: false
+      blockaudiofragment:
+        weight: 25
+        enabled: false
+      blockblogpost:
+        weight: 26
+        enabled: false
+      blockbutton:
+        weight: 27
+        enabled: false
+      blockheromain:
+        weight: 28
+        enabled: false
+      blockherosecondary:
+        weight: 29
+        enabled: false
+      blockherotertiary:
+        weight: 30
+        enabled: false
+      blocklatest:
+        weight: 35
+        enabled: false
+      blockmore:
+        weight: 36
+        enabled: false
+      slideheromain:
+        weight: 42
+        enabled: false
+      stat:
+        weight: 43
+        enabled: false
+      statistic:
+        weight: 44
         enabled: false
 field_type: entity_reference_revisions
