--- a/deploy/var/drupal-config/sync/field.field.paragraph.blockimagewithcontent.field_paragraph.yml
+++ b/deploy/var/drupal-config/sync/field.field.paragraph.blockimagewithcontent.field_paragraph.yml
@@ -13,7 +13,7 @@ entity_type: paragraph
 bundle: blockimagewithcontent
 label: Paragraph
 description: ''
-required: false
+required: true
 translatable: true
 default_value: {  }
 default_value_callback: ''
