--- a/deploy/var/drupal-config/sync/field.field.node.page.field_blocks.yml
+++ b/deploy/var/drupal-config/sync/field.field.node.page.field_blocks.yml
@@ -24,6 +24,7 @@ dependencies:
     - paragraphs.paragraphs_type.blockmore
     - paragraphs.paragraphs_type.blocknetworkoverview
     - paragraphs.paragraphs_type.blockpagenotfound
+    - paragraphs.paragraphs_type.blockpathtopurchase
   module:
     - entity_reference_revisions
 id: node.page.field_blocks
@@ -58,6 +59,7 @@ settings:
       blocknetworkoverview: blocknetworkoverview
       blockpagenotfound: blockpagenotfound
       blockherotertiary: blockherotertiary
+      blockpathtopurchase: blockpathtopurchase
       blockinfo: blockinfo
     target_bundles_drag_drop:
       blockhowtoadvertise:
@@ -135,6 +137,9 @@ settings:
       blockherotertiary:
         enabled: true
         weight: 30
+      blockpathtopurchase:
+        enabled: true
+        weight: 31
       blockinfo:
         enabled: true
         weight: 36
